karnc/tests/fixtures/negative/201_actor_scheme_unsupported/src/demo.karn
context demo

actor Caller2 { auth = Bearer }
